# pyfu

./: .gitignore  README.md  build.py  cli.spec  pyproject.toml
src/pyfu/: cli.py
tests/: awful_code.py  awful_code_sanitized.py
