[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfu"
version = "0.0.1"
description = "Python Fixer Upper"
dependencies = ["black", "mypy", "rich", "ruff"]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
pyfu = "pyfu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfu"]
